--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="auth.user | async as user; else login">LOGON</div>
+<div *ngIf="auth.user | async as user; else login">{{user.email}} - {{user.uid}}</div>
 
   <ng-template #login>
     <div class="loginDiv">
