--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,17 @@
-<div *ngIf="auth.user | async as user; else login">{{user.email}} - {{user.uid}}</div>
+<div class="loginDiv" *ngIf="( authApp.user | async) as obs; else login">{{obs.email}} - {{obs.uid}}
+  <br/><br/>
+  <button class="btn btn-secondary" (click)="authApp.logout()">OUT</button>
+  <br/><br/>
+</div>
 
   <ng-template #login>
     <div class="loginDiv">
         <br/><br/>
-        <button class="btn btn-primary" (click)="auth.login()">Email Login</button>
+        <button class="btn btn-primary" (click)="authApp.login()">
+          <i class="far fa-envelope"></i>
+          Email Login</button>
         <br/><br/>
-        <button class="btn btn-danger" (click)="auth.glogin()">
+        <button class="btn btn-danger" (click)="authApp.glogin()">
           <i class="fab fa-google"></i>
           Google Login
         </button>
