--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
   <br/><br/>
   <button class="btn btn-secondary" (click)="authApp.logout()">OUT</button>
   <br/><br/>
+  <br/><br/>
+  <button class="btn btn-primary" (click)="dbApp.altausuario()">ALTA</button>
+  <br/><br/>
 </div>
 
   <ng-template #login>
