Autenticación por github. Antes registrar la aplicación https://github.com/settings/applications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,8 @@
     <div class="loginDiv">
         <br/><br/>
         <button class="btn btn-primary" (click)="authApp.login()">
-          <i class="far fa-envelope"></i>
-          Email Login</button>
+          <i class="fab fa-github"></i>
+          GitHub Login</button>
         <br/><br/>
         <button class="btn btn-danger" (click)="authApp.glogin()">
           <i class="fab fa-google"></i>
