--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="loginDiv" *ngIf="( authApp.user | async) as obs; else login">{{obs.email}} - {{obs.uid}}
   <br/><br/>
-  <button class="btn btn-secondary" (click)="authApp.logout()">OUT</button>
+  <button class="btn btn-secondary" (click)="authApp.logout()"><i class="fas fa-sign-out-alt"></i> OUT</button>
   <br/><br/>
-  <br/><br/>
-  <button class="btn btn-primary" (click)="dbApp.altausuario()">ALTA</button>
+  <button class="btn btn-success" (click)="dbApp.altausuario(obs.email, obs.uid)"><i class="fas fa-check"></i> ALTA</button>
+  <button class="btn btn-danger" (click)="dbApp.bajausuario(obs.uid)"><i class="far fa-trash-alt"></i> BAJA</button>
   <br/><br/>
 </div>
 
