--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,20 @@
 <div class="loginDiv" *ngIf="( authApp.user | async) as obs; else login">{{obs.email}} - {{obs.uid}}
   <br/><br/>
-  <button class="btn btn-secondary" (click)="authApp.logout()"><i class="fas fa-sign-out-alt"></i> OUT</button>
+  <button ion-button class="btn btn-secondary" (click)="authApp.logout()"><i class="fas fa-sign-out-alt"></i> OUT</button>
   <br/><br/>
-  <button class="btn btn-success" (click)="dbApp.altausuario(obs.email, obs.uid)"><i class="fas fa-check"></i> ALTA</button>
-  <button class="btn btn-danger" (click)="dbApp.bajausuario(obs.uid)"><i class="far fa-trash-alt"></i> BAJA</button>
+  <button ion-button class="btn btn-success" (click)="dbApp.altausuario(obs.email, obs.uid)"><i class="fas fa-check"></i> ALTA</button>
+  <button ion-button class="btn btn-danger" (click)="dbApp.bajausuario(obs.uid)"><i class="far fa-trash-alt"></i> BAJA</button>
   <br/><br/>
 </div>
 
   <ng-template #login>
     <div class="loginDiv">
         <br/><br/>
-        <button class="btn btn-primary" (click)="authApp.login()">
+        <button ion-button class="btn btn-primary" (click)="authApp.login()">
           <i class="fab fa-github"></i>
           GitHub Login</button>
         <br/><br/>
-        <button class="btn btn-danger" (click)="authApp.glogin()">
+        <button ion-button ion-button class="btn btn-danger" (click)="authApp.glogin()">
           <i class="fab fa-google"></i>
           Google Login
         </button>
